--- a/timer/pubspec.yaml
+++ b/timer/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_ringtone_player: ^3.2.0
+  numberpicker: ^2.1.1
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +72,8 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
+  assets:
+    - assets/audio/
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
