--- a/timer/pubspec.yaml
+++ b/timer/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_ringtone_player: ^3.2.0
   numberpicker: ^2.1.1
   audioplayers: ^0.20.1
+  flutter_local_notifications: ^12.0.3
 
 dev_dependencies:
   flutter_test:
