--- a/timer/pubspec.yaml
+++ b/timer/pubspec.yaml
@@ -31,6 +31,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  # database storage
+  sqflite: ^2.0.0+3
+
+  # format DateTime
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +46,7 @@ dependencies:
   numberpicker: ^2.1.1
   audioplayers: ^0.20.1
   flutter_local_notifications: ^12.0.3
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
