--- a/Journey/pubspec.yaml
+++ b/Journey/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   maps_launcher: ^2.2.0
   place_picker: ^0.10.0
   flutter_polyline_points: ^1.0.0
+  provider: ^6.0.5
 
 
 dev_dependencies:
