--- a/Journey/pubspec.yaml
+++ b/Journey/pubspec.yaml
@@ -1,4 +1,4 @@
-name: am023_todo_list_floor
+name: Journey
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
