--- a/Journey/android/app/src/main/AndroidManifest.xml
+++ b/Journey/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
    <application
-        android:label="am023_todo_list_floor"
+        android:label="Journey"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
