--- a/Journey/pubspec.yaml
+++ b/Journey/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
     sdk: flutter
   floor_generator: ^1.3.0
   build_runner: ^2.1.2
+  flutter_launcher_icons: "^0.12.0"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -57,6 +58,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
