--- a/memo/pubspec.yaml
+++ b/memo/pubspec.yaml
@@ -1,4 +1,4 @@
-name: am032_todo_list
+name: todo_list
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   floor: ^1.4.1
+  flutter_native_timezone: ^2.0.0
   
 
 dev_dependencies:
@@ -45,6 +46,7 @@ dev_dependencies:
     sdk: flutter
   floor_generator: ^1.3.0
   build_runner: ^2.1.5
+  flutter_local_notifications: 13.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
