--- a/memo/pubspec.yaml
+++ b/memo/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.5
   floor: ^1.4.1
   flutter_native_timezone: ^2.0.0
+  flutter_background: ^1.2.0
   
 
 dev_dependencies:
@@ -47,6 +48,7 @@ dev_dependencies:
   floor_generator: ^1.3.0
   build_runner: ^2.1.5
   flutter_local_notifications: 13.0.0
+  flutter_launcher_icons: "^0.12.0"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -54,6 +56,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
